# LinguaLinked-Inference

./: gptq_generation.py  gptq_test.py  requirement.txt  residual_inference_test_local.py  root.py
SecureConnection/: README.md  Test.py  __init__.py  client.py  command.txt  communication.py  config.yaml  control.py  customThread.py  encryption.py  executaion.py  monitor.py  root_server.py  server.py  test_server.py
android/: README.md  install_dependency.sh
android/distributed_inference_demo/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/distributed_inference_demo/distribute_ui/src/main/cpp/: CMakeLists.txt  README.md  decoding.cpp  decoding.h  inference.cpp  inference.h  native-lib.cpp  session_cache.h  utils.cpp  utils.h
android/distributed_inference_demo/distribute_ui/src/main/cpp/tokenizers-cpp/: CMakeLists.txt
android/distributed_inference_demo/distribute_ui/src/main/cpp/tokenizers-cpp/include/: tokenizers_c.h  tokenizers_cpp.h
android/distributed_inference_demo/distribute_ui/src/main/cpp/tokenizers-cpp/rust/src/: lib.rs
android/distributed_inference_demo/distribute_ui/src/main/cpp/tokenizers-cpp/sentencepiece/src/: CMakeLists.txt
android/distributed_inference_demo/distribute_ui/src/main/cpp/tokenizers-cpp/src/: huggingface_tokenizer.cc  sentencepiece_tokenizer.cc
system_pipeline/: README.md
system_pipeline/model_split/: __init__.py  model_split.py  utils.py
system_pipeline/onnx_backend/: __init__.py  onnx.py  optimization.py
system_pipeline/quantization/: __init__.py  quantize.py
util/: model_card.py  module_utils.py
(+42 files in other folders)
